--- a/Mini_Projects_2.ipynb
+++ b/Mini_Projects_2.ipynb
@@ -5,7 +5,6 @@
     "colab": {
       "name": "Mini_Projects_2.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNTRodnY53ffZsRLxkXZa2q",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -21,7 +20,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/nouran551/Machine-Learning-Training/blob/main/Mini_Projects_2.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/petermaher78/Machine-Learning-Training/blob/main/Mini_Projects_2.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -47,13 +46,31 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "JkhyBliV5o_W"
+        "id": "JkhyBliV5o_W",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "1face00c-a30f-4f93-9851-b527e1f81a02"
       },
       "source": [
-        ""
+        "for mainute in range(10,31,5):\n",
+        "  print(\"The calories you have burnt in \",mainute,\"is\",format(4.2*mainute, '.2f'),\"colories\")\n",
+        "\n"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "The calories you have burnt in  10 is 42.00 colories\n",
+            "The calories you have burnt in  15 is 63.00 colories\n",
+            "The calories you have burnt in  20 is 84.00 colories\n",
+            "The calories you have burnt in  25 is 105.00 colories\n",
+            "The calories you have burnt in  30 is 126.00 colories\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -88,13 +105,41 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "rEwAkAKZDvCu"
+        "id": "rEwAkAKZDvCu",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "6d604058-7aee-46b7-dd73-63f710f3ce56"
       },
       "source": [
-        ""
+        "speed = int(input(\"What is the speed of the vehicle in mph? \"))\n",
+        "time = int(input(\"How many hours has it Traveled? \"))\n",
+        "\n",
+        "print()\n",
+        "print(\"Hour\\t\\tDistance Traveled\")\n",
+        "print(\"_________________________________\")\n",
+        "\n",
+        "for h in range(1,time+1):\n",
+        "  distance = (h)*speed\n",
+        "  print(h,\"\\t\\t\",distance)\n"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "What is the speed of the vehicle in mph? 40\n",
+            "How many hours has it Traveled? 3\n",
+            "\n",
+            "Hour\t\tDistance Traveled\n",
+            "_________________________________\n",
+            "1 \t\t 40\n",
+            "2 \t\t 80\n",
+            "3 \t\t 120\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -129,13 +174,52 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "D_Ri_C_1FSpK"
+        "id": "D_Ri_C_1FSpK",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "6b7bdc89-98f1-459c-a133-43a2fb15ea2f"
       },
       "source": [
-        ""
+        "print(\"Celsius\\t\\tFahrenheit\")\n",
+        "print(\"__________________________\")\n",
+        "\n",
+        "for c in range(0,21):\n",
+        "  f = 9/5 *c + 32\n",
+        "  print(c,\"\\t\\t\",format(f,'.1f'))\n"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Celsius\t\tFahrenheit\n",
+            "__________________________\n",
+            "0 \t\t 32.0\n",
+            "1 \t\t 33.8\n",
+            "2 \t\t 35.6\n",
+            "3 \t\t 37.4\n",
+            "4 \t\t 39.2\n",
+            "5 \t\t 41.0\n",
+            "6 \t\t 42.8\n",
+            "7 \t\t 44.6\n",
+            "8 \t\t 46.4\n",
+            "9 \t\t 48.2\n",
+            "10 \t\t 50.0\n",
+            "11 \t\t 51.8\n",
+            "12 \t\t 53.6\n",
+            "13 \t\t 55.4\n",
+            "14 \t\t 57.2\n",
+            "15 \t\t 59.0\n",
+            "16 \t\t 60.8\n",
+            "17 \t\t 62.6\n",
+            "18 \t\t 64.4\n",
+            "19 \t\t 66.2\n",
+            "20 \t\t 68.0\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -169,7 +253,15 @@
         "id": "AUTAqQKlFU_Y"
       },
       "source": [
-        ""
+        "\n",
+        "num = int(input(\"enter a number: \"))\n",
+        " \n",
+        "fac = 1\n",
+        " \n",
+        "for i in range(1, num + 1):\n",
+        "\tfac = fac * i\n",
+        " \n",
+        "print(\"factorial of \", num, \" is \", fac)"
       ],
       "execution_count": null,
       "outputs": []
@@ -177,13 +269,33 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "7BLQxptaOy4H"
+        "id": "7BLQxptaOy4H",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "926eb45d-f860-4015-f9d9-5b597a57c2be"
       },
       "source": [
-        ""
+        "num = int(input(\"enter a number: \"))\n",
+        " \n",
+        "fac = 1\n",
+        " \n",
+        "for i in range(1, num + 1):\n",
+        "\tfac = fac * i\n",
+        " \n",
+        "print(\"factorial of \", num, \" is \", fac)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "enter a number: 4\n",
+            "factorial of  4  is  24\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -201,24 +313,60 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "xbF5fwWXOxwR"
+        "id": "xbF5fwWXOxwR",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "afa9eacd-8180-494e-919e-20625b2e0c17"
       },
       "source": [
-        ""
+        "for i in range (6,0,-1):\n",
+        "  print(i*\"*\" )"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 77,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "******\n",
+            "*****\n",
+            "****\n",
+            "***\n",
+            "**\n",
+            "*\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "qKGcnKadOxzI"
+        "id": "qKGcnKadOxzI",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "9222ffd2-4de4-4a28-bdc2-c6d139fd6c83"
       },
       "source": [
-        ""
+        "for i in range (6):\n",
+        "    print(\"#\"+ i*\" \" + \"#\" )"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 79,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "##\n",
+            "# #\n",
+            "#  #\n",
+            "#   #\n",
+            "#    #\n",
+            "#     #\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -244,13 +392,52 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "lidYoHbhRUZ5"
+        "id": "lidYoHbhRUZ5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "066bf50b-f38c-43de-ffd0-0f993b8718be"
       },
       "source": [
-        ""
+        "import random\n",
+        "def main():\n",
+        "  n1 = random.randint(1,1000)\n",
+        "  n2 = random.randint(1,1000)\n",
+        "  Correct_ans = sum(n1,n2)\n",
+        "  print(n1,n2)\n",
+        "  user_ans = int(input(\"What is the sum of 2 number? \"))\n",
+        "  if user_ans == Correct_ans:\n",
+        "    correct()\n",
+        "  else:\n",
+        "    not_correct(Correct_ans)\n",
+        "\n",
+        "def sum(x,y):\n",
+        "  z = x + y\n",
+        "  return z\n",
+        "\n",
+        "\n",
+        "def correct():\n",
+        "  print(\"congratulations!\")\n",
+        "\n",
+        "\n",
+        "\n",
+        "def not_correct(x):\n",
+        "  print(\"wrong ans, right ans equals \",x )\n",
+        "\n",
+        "main()\n"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 57,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "804 994\n",
+            "What is the sum of 2 number? 545\n",
+            "wrong ans, right ans equals  1798\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -284,139 +471,42 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "YUuP_mvpIhBx"
+        "id": "YUuP_mvpIhBx",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "2653b86c-7fc4-48d1-9336-4f962f25eb9c"
       },
       "source": [
-        ""
+        "def main():\n",
+        "  mass = float(input(\"Enter the mass in kg \"))\n",
+        "  velocity = float(input(\"Enter the velocity \"))\n",
+        "  kinetic_energy = KE(mass,velocity)\n",
+        "  print(\"kinetic_energy =\" ,kinetic_energy)\n",
+        "\n",
+        "\n",
+        "def KE(m,v):\n",
+        "  ke = 0.5*m*v**2\n",
+        "  return ke\n",
+        "main()"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Enter the mass in kg 34\n",
+            "Enter the velocity 4\n",
+            "kinetic_energy = 272.0\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "uWNblMuHRRD8"
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "c2sSEq3uSurn"
-      },
-      "source": [
-        "# Files and Exceptions"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "qw2XyRs-TWIF"
-      },
-      "source": [
-        "**8. Sum of Numbers** <br>\n",
-        "Assume that a file containing a series of integers is named numbers.txt and exists on the computer’s disk. Write a program that reads all of the numbers stored in the file and calculates their total.\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "92EStR9KSu8N"
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "B7GImG_lSu-u"
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "gW0mWcdDVgK4"
-      },
-      "source": [
-        "**9. Average of Numbers** <br>\n",
-        "Assume that a file containing a series of integers is named numbers.txt and exists on the computer’s disk. Write a program that calculates the average of all the numbers stored in\n",
-        "the file"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "3-DZx-vnSvCe"
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "vjchCYETVwPx"
-      },
-      "source": [
-        "**10. Random Number File Writer**<br>\n",
-        "Write a program that writes a series of random numbers to a file. Each random number should be in the range of 1 \n",
-        "through 500. The application should let the user specify how\n",
-        "many random numbers the file will hold.\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "DCyba_BZVxLF"
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "uZ7CQJM0VxN5"
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "p75ZKqbXWMdY"
-      },
-      "source": [
-        "**11.  Exception Handing** <br>\n",
-        "Modify the program that you wrote for Exercise 9 so it handles the following exceptions: <br>\n",
-        "* It should handle any IOError exceptions that are raised when the file is opened and data\n",
-        "is read from it. <br>\n",
-        "* It should handle any ValueError exceptions that are raised when the items that are read from the file are converted to a number."
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "22SOHQbrVxRE"
       },
       "source": [
         ""
